Another fix to sed syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,12 +93,12 @@ jobs:
     - name: Prepare dependencies (Mac)
       if: ${{ contains(matrix.os, 'macos') }}
       run: |
-        sed -i -e "s/- cudatoolkit/# - cudatoolkit/" \
-               -e "s/- gxx_linux-64/# - gxx_linux-64/" \
-               -e "s/- nvcc_linux-64/# - nvcc_linux-64/" \
-               -e "s/- python/- python ${{ matrix.python }}.*/" \
-               -e "s/- pytorch-gpu/- pytorch-cpu ${{ matrix.pytorch }}/" \
-               environment.yml
+        sed -i '' -e "s/- cudatoolkit/# - cudatoolkit/" \
+                  -e "s/- gxx_linux-64/# - gxx_linux-64/" \
+                  -e "s/- nvcc_linux-64/# - nvcc_linux-64/" \
+                  -e "s/- python/- python ${{ matrix.python }}.*/" \
+                  -e "s/- pytorch-gpu/- pytorch-cpu ${{ matrix.pytorch }}/" \
+                  environment.yml
 
     - name: Show dependency file
       run: cat environment.yml
