--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       with:
         activate-environment: ""
         auto-activate-base: true
-        miniforge-variant: Miniforge3
+        miniforge-variant: Mambaforge
 
     - name: Prepare dependencies (with CUDA)
       if: ${{ matrix.enable_cuda }}
@@ -81,7 +81,7 @@ jobs:
       run: cat environment.yml
 
     - name: Install dependencies
-      run: conda env create -n nnpops -f environment.yml
+      run: mamba env create -n nnpops -f environment.yml
 
     - name: List conda environment
       run: |
