--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,8 +100,15 @@ jobs:
                   -e "s/- python/- python ${{ matrix.python }}.*/" \
                   -e "s/- pytorch-gpu/- pytorch-cpu ${{ matrix.pytorch }}/" \
                   environment.yml
-        printenv DYLD_LIBRARY_PATH
-        export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$CONDA_PREFIX/lib
+
+    - name: printenv
+      run: printenv DYLD_LIBRARY_PATH
+
+    - name: export
+      run: export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$CONDA_PREFIX/lib
+
+    - name: printenv2
+      run: printenv DYLD_LIBRARY_PATH
 
     - name: Show dependency file
       run: cat environment.yml
@@ -116,7 +123,6 @@ jobs:
 
     - name: Configure, compile, and install
       run: |
-        printenv DYLD_LIBRARY_PATH
         conda activate nnpops
         mkdir build && cd build
         cmake .. \
