--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,7 +103,10 @@ jobs:
 
     - name: export
       run: |
+        echo "Prefix"
+        echo $CONDA_PREFIX
         export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$CONDA_PREFIX/lib
+        echo "PATH"
         echo $DYLD_LIBRARY_PATH
 
     - name: Show dependency file
@@ -119,7 +122,7 @@ jobs:
 
     - name: Configure, compile, and install
       run: |
-        export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$CONDA_PREFIX/lib
+        export DYLD_LIBRARY_PATH=/Users/runner/miniconda3/envs/nnpops/lib
         conda activate nnpops
         mkdir build && cd build
         cmake .. \
