--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,14 +101,6 @@ jobs:
                   -e "s/- pytorch-gpu/- pytorch-cpu ${{ matrix.pytorch }}/" \
                   environment.yml
 
-    - name: export
-      run: |
-        echo "Prefix"
-        echo $CONDA_PREFIX
-        export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$CONDA_PREFIX/lib
-        echo "PATH"
-        echo $DYLD_LIBRARY_PATH
-
     - name: Show dependency file
       run: cat environment.yml
 
@@ -122,7 +114,6 @@ jobs:
 
     - name: Configure, compile, and install
       run: |
-        export DYLD_LIBRARY_PATH=/Users/runner/miniconda3/envs/nnpops/lib
         conda activate nnpops
         mkdir build && cd build
         cmake .. \
@@ -130,7 +121,7 @@ jobs:
               -DTorch_DIR=$CONDA_PREFIX/lib/python${{ matrix.python }}/site-packages/torch/share/cmake/Torch \
               -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX
         cat CMakeCache.txt
-        make install
+        make VERBOSE=1 install
 
     - name: Test
       run: |
