--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,25 +20,31 @@ jobs:
       fail-fast: false
       matrix:
         include:
+
           # Oldest supported versions
-          - enable_cuda: true
-            cuda: "10.2.89"
-            gcc: "8.5.0"
+          - name: Linux (CUDA 11.2, Python 3.7, PyTorch 1.11)
+            enable_cuda: true
+            cuda: "10.2"
+            gcc: "8.5"
             nvcc: "10.2"
             python: "3.7"
-            pytorch: "1.11.0"
-          # Latest supported versions
-          - enable_cuda: true
-            cuda: "11.2.2"
-            gcc: "10.3.0"
+            pytorch: "1.11"
+
+          # Latest supported versions (with CUDA)
+          - name: Linux (CUDA 11.2, Python 3.10, PyTorch 1.11)
+            enable_cuda: true
+            cuda: "11.2"
+            gcc: "10.3"
             nvcc: "11.2"
             python: "3.10"
-            pytorch: "1.11.0"
-          # Without CUDA
-          - enable_cuda: false
-            gcc: "10.3.0"
+            pytorch: "1.11"
+
+          # Latest supported versions (without CUDA)
+          - name: Linux (no CUDA, Python 3.10, PyTorch 1.11)
+            enable_cuda: false
+            gcc: "10.3"
             python: "3.10"
-            pytorch: "1.11.0"
+            pytorch: "1.11"
 
     steps:
     - name: Check out
