--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         include:
 
           # Oldest supported versions
-          - name: Linux (CUDA 11.2, Python 3.7, PyTorch 1.11)
+          - name: Linux (CUDA 10.2, Python 3.7, PyTorch 1.11)
             enable_cuda: true
             cuda: "10.2.89"
             gcc: "8.5"
@@ -31,21 +31,30 @@ jobs:
             python: "3.7"
             pytorch: "1.11"
 
+          # Older supported versions
+          - name: Linux (CUDA 11.2, Python 3.9, PyTorch 1.11)
+            enable_cuda: true
+            cuda: "11.2.2"
+            gcc: "10.3"
+            nvcc: "11.2"
+            python: "3.9"
+            pytorch: "1.11"
+
           # Latest supported versions (with CUDA)
-          - name: Linux (CUDA 11.2, Python 3.10, PyTorch 1.11)
+          - name: Linux (CUDA 11.2, Python 3.10, PyTorch 1.12)
             enable_cuda: true
             cuda: "11.2.2"
             gcc: "10.3"
             nvcc: "11.2"
             python: "3.10"
-            pytorch: "1.11"
+            pytorch: "1.12"
 
           # Latest supported versions (without CUDA)
-          - name: Linux (no CUDA, Python 3.10, PyTorch 1.11)
+          - name: Linux (no CUDA, Python 3.10, PyTorch 1.12)
             enable_cuda: false
             gcc: "10.3"
             python: "3.10"
-            pytorch: "1.11"
+            pytorch: "1.12"
 
     steps:
     - name: Check out
