--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,9 @@ jobs:
 
     - name: Install dependencies
       run: mamba env create -n nnpops -f environment.yml
+      env:
+        # Needed to install pytorch-gpu on a machine without a GPU
+        CONDA_OVERRIDE_CUDA: ${{ matrix.nvcc }}
 
     - name: List conda environment
       run: |
