--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
         mkdir build && cd build
         cmake .. \
               -DENABLE_CUDA=${{ matrix.enable_cuda }} \
-              -DTorch_DIR=$(python -c 'import torch.utils; print(torch.utils.cmake_prefix_path)') \
+              -DTorch_DIR=$(python -c 'import torch.utils; print(torch.utils.cmake_prefix_path)')/Torch \
               -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX
         make install
 
