--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
       uses: Jimver/cuda-toolkit@v0.2.8
       with:
         cuda: ${{ matrix.cuda }}
+        linux-local-args: '["--toolkit", "--override"]'
       if: ${{ matrix.enable_cuda }}
 
     - name: Install Miniconda
