--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,45 +16,45 @@ defaults:
 jobs:
   build:
     name: ${{ matrix.name }}
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
         include:
 
           # Oldest supported versions
-          - name: Linux (CUDA 10.2, Python 3.7, PyTorch 1.11)
+          - name: Linux (CUDA 10.2, Python 3.8, PyTorch 1.11)
             enable_cuda: true
             cuda: "10.2.89"
             gcc: "8.5.*"
             nvcc: "10.2"
-            python: "3.7.*"
+            python: "3.8.*"
             pytorch: "1.11.*"
 
           # Older supported versions
-          - name: Linux (CUDA 11.2, Python 3.9, PyTorch 1.11)
+          - name: Linux (CUDA 11.2, Python 3.9, PyTorch 1.12)
             enable_cuda: true
             cuda: "11.2.2"
             gcc: "10.3.*"
             nvcc: "11.2"
             python: "3.9.*"
-            pytorch: "1.11.*"
+            pytorch: "1.12.*"
 
           # Latest supported versions (with CUDA)
-          - name: Linux (CUDA 11.7, Python 3.10, PyTorch 1.12)
+          - name: Linux (CUDA 11.7, Python 3.10, PyTorch 1.13)
             enable_cuda: true
             cuda: "11.7.0"
             gcc: "10.3.*"
             nvcc: "11.7"
             python: "3.10.*"
-            pytorch: "1.12.*"
+            pytorch: "1.13.*"
 
           # Latest supported versions (without CUDA)
-          - name: Linux (no CUDA, Python 3.10, PyTorch 1.12)
+          - name: Linux (no CUDA, Python 3.10, PyTorch 1.13)
             enable_cuda: false
             gcc: "10.3.*"
             python: "3.10.*"
-            pytorch: "1.12.*"
+            pytorch: "1.13.*"
 
     steps:
     - name: Check out
@@ -64,6 +64,7 @@ jobs:
       uses: Jimver/cuda-toolkit@v0.2.8
       with:
         cuda: ${{ matrix.cuda }}
+        linux-local-args: '["--toolkit", "--override"]' # Need to install CUDA 10.2
       if: ${{ matrix.enable_cuda }}
 
     - name: Install Miniconda
