Update environments to support torch 2.0

--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,16 @@
 channels:
   - conda-forge
+  - pytorch
 dependencies:
   - cmake >=3.20
-  - cudatoolkit 11.2.2
+  - cudatoolkit >=11.8
   - gxx_linux-64 10.3.*
   - make
   - mdtraj
-  - nvcc_linux-64 11.2
+  - nvcc_linux-64 >=11.8
   - torchani 2.2.2
   - pytest
   - python 3.10.*
-  - pytorch-gpu 1.12.*
+  - pytorch
+  - pytorch-gpu 2.*
   - sysroot_linux-64 2.17
