--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,11 +41,11 @@ jobs:
             pytorch: "1.12.*"
 
           # Latest supported versions (with CUDA)
-          - name: Linux (CUDA 11.8, Python 3.10, PyTorch 2.0)
+          - name: Linux (CUDA 11.7, Python 3.10, PyTorch 2.0)
             enable_cuda: true
-            cuda: "11.8.*"
+            cuda: "11.7.0"
             gcc: "10.3.*"
-            nvcc: "11.8.*"
+            nvcc: "11.7.0"
             python: "3.10.*"
             pytorch: "2.*"
 
@@ -64,7 +64,7 @@ jobs:
       uses: Jimver/cuda-toolkit@v0.2.8
       with:
         cuda: ${{ matrix.cuda }}
-        linux-local-args: '["--toolkit", "--override"]' # Need to install CUDA 10.2
+        linux-local-args: '["--toolkit", "--override"]' 
       if: ${{ matrix.enable_cuda }}
 
     - name: Install Miniconda
