--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,9 @@ jobs:
             pytorch: "1.12.*"
 
           # Latest supported versions (with CUDA)
-          - name: Linux (CUDA 11.7, Python 3.10, PyTorch 2.0)
+          - name: Linux (CUDA 11.8.0, Python 3.10, PyTorch 2.0)
             enable_cuda: true
-            cuda: "11.7.*"
+            cuda: "11.8.0"
             gcc: "10.3.*"
             nvcc: "11.7.0"
             python: "3.10.*"
