--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
             gcc: "8.5.*"
             nvcc: "10.2"
             python: "3.8.*"
+            torchani: "2.2.2"
             pytorch: "1.11.*"
 
           # Older supported versions
@@ -38,6 +39,7 @@ jobs:
             gcc: "10.3.*"
             nvcc: "11.2"
             python: "3.9.*"
+            torchani: "2.2.2"
             pytorch: "1.12.*"
 
           # Latest supported versions (with CUDA)
@@ -47,6 +49,7 @@ jobs:
             gcc: "10.3.*"
             nvcc: "11.7.0"
             python: "3.10.*"
+            torchani: "2.2.3"
             pytorch: "2.*"
 
           # Latest supported versions (without CUDA)
@@ -55,6 +58,7 @@ jobs:
             gcc: "10.3.*"
             python: "3.10.*"
             pytorch: "2.*"
+            torchani: "2.2.2"
 
     steps:
     - name: Check out
@@ -79,6 +83,7 @@ jobs:
       run: |
         sed -i -e "/cudatoolkit/c\  - cudatoolkit ${{ matrix.cuda }}" \
                -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
+               -e "/torchani/c\  - torchani ${{ matrix.gcc }}" \
                -e "/nvcc_linux-64/c\  - nvcc_linux-64 ${{ matrix.nvcc }}" \
                -e "/python/c\  - python ${{ matrix.python }}" \
                -e "/pytorch-gpu/c\  - pytorch-gpu ${{ matrix.pytorch }}" \
@@ -89,6 +94,7 @@ jobs:
       run: |
         sed -i -e "/cudatoolkit/c\  # - cudatoolkit" \
                -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
+               -e "/torchani/c\  - torchani ${{ matrix.gcc }}" \
                -e "/nvcc_linux-64/c\  # - nvcc_linux-64" \
                -e "/python/c\  - python ${{ matrix.python }}" \
                -e "/pytorch-gpu/c\  - pytorch-cpu ${{ matrix.pytorch }}" \
