--- a/.github/workflows/self-hosted-gpu-test.yml
+++ b/.github/workflows/self-hosted-gpu-test.yml
@@ -50,17 +50,10 @@ jobs:
     runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
     timeout-minutes: 1200 # 20 hrs
     steps:
-    env:
-      HOME: /home/ec2-user
 
     - name: Check out
       uses: actions/checkout@v3
 
-    - name: setup home env
-      run: |
-        echo $HOME
-        export HOME=/home/ec2-user
-        echo $HOME
 
     - name: Install CUDA Toolkit
       uses: Jimver/cuda-toolkit@v0.2.10
@@ -68,38 +61,19 @@ jobs:
         cuda: "11.8.0"
         linux-local-args: '["--toolkit", "--override"]'
 
-    - name: Install Miniconda
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Install Micromamba
+      uses: mamba-org/provision-with-micromamba@main
       with:
-        activate-environment: ""
-        auto-activate-base: true
-        miniforge-variant: Mambaforge
-
-    - name: Prepare dependencies (with CUDA)
-      run: |
-        sed -i -e "/cudatoolkit/c\  - cudatoolkit ${{ matrix.cuda }}" \
-               -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
-               -e "/torchani/c\  - torchani ${{ matrix.torchani }}" \
-               -e "/nvcc_linux-64/c\  - nvcc_linux-64 ${{ matrix.nvcc }}" \
-               -e "/python/c\  - python ${{ matrix.python }}" \
-               -e "/pytorch-gpu/c\  - pytorch-gpu ${{ matrix.pytorch }}" \
-               environment.yml
-
-
-    - name: Show dependency file
-      run: cat environment.yml
-
-    - name: Install dependencies
-      run: mamba env create -n nnpops -f environment.yml
-
-    - name: List conda environment
-      run: |
-        conda activate nnpops
-        conda list
+        extra-specs: |
+            cudatoolkit==11.8.0
+            gxx_linux-64==10.3.*
+            torchani==2.2.*
+            nvcc_linux-64==11.8
+            python==3.10.*
+            pytorch-gpu==2.0.*
 
     - name: Configure, compile, and install
       run: |
-        conda activate nnpops
         mkdir build && cd build
         cmake .. \
               -DENABLE_CUDA=true \
@@ -109,7 +83,6 @@ jobs:
 
     - name: Test
       run: |
-        conda activate nnpops
         cd build
         ctest --verbose
 
