fix some version pins

--- a/.github/workflows/self-hosted-gpu-test.yml
+++ b/.github/workflows/self-hosted-gpu-test.yml
@@ -59,10 +59,10 @@ jobs:
       with:
         environment-name: nnpops
         extra-specs: |
-            cudatoolkit==11.7.0
+            cudatoolkit==11.7.*
             gxx_linux-64==10.3.*
             torchani==2.2.*
-            nvcc_linux-64==11.7
+            nvcc_linux-64==11.7.*
             python==3.10.*
             pytorch-gpu==2.0.*
 
