--- a/environment.yml
+++ b/environment.yml
@@ -2,13 +2,13 @@ channels:
   - conda-forge
 dependencies:
   - cmake >=3.20
-  - cudatoolkit 11.8.*
-  - gxx_linux-64 10.3.*
+  - cudatoolkit
+  - gxx_linux-64
   - make
   - mdtraj
-  - nvcc_linux-64 11.8
-  - torchani 2.2.*
+  - nvcc_linux-64
+  - torchani
   - pytest
-  - python 3.10.*
-  - pytorch-gpu 2.0.*
+  - python
+  - pytorch-gpu
   - sysroot_linux-64 2.17
