getting some weird activation problems

--- a/.github/workflows/self-hosted-gpu-test.yml
+++ b/.github/workflows/self-hosted-gpu-test.yml
@@ -73,8 +73,11 @@ jobs:
       run: |
 
         echo $CONDA_PREFIX
+        eval "$(micromamba shell hook --shell=bash)"
         micromamba activate nnpops
+        echo "conda prefix |"
         echo $CONDA_PREFIX
+        echo "conda prefix /"
         mkdir build && cd build
         cmake .. \
               -DENABLE_CUDA=true \
@@ -84,6 +87,7 @@ jobs:
 
     - name: Test
       run: |
+        eval "$(micromamba shell hook --shell=bash)"
         micromamba activate nnpops
         cd build
         ctest --verbose
