--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,52 +71,43 @@ jobs:
         linux-local-args: '["--toolkit", "--override"]' 
       if: ${{ matrix.enable_cuda }}
 
-    - name: Install Miniconda
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        activate-environment: ""
-        auto-activate-base: true
-        miniforge-variant: Mambaforge
-
-    - name: Prepare dependencies (with CUDA)
+    - name: Install Micromamba (with cuda)
       if: ${{ matrix.enable_cuda }}
-      run: |
-        sed -i -e "/cudatoolkit/c\  - cudatoolkit ${{ matrix.cuda }}" \
-               -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
-               -e "/torchani/c\  - torchani ${{ matrix.torchani }}" \
-               -e "/nvcc_linux-64/c\  - nvcc_linux-64 ${{ matrix.nvcc }}" \
-               -e "/python/c\  - python ${{ matrix.python }}" \
-               -e "/pytorch-gpu/c\  - pytorch-gpu ${{ matrix.pytorch }}" \
-               environment.yml
-
-    - name: Prepare dependencies (without CUDA)
-      if: ${{ !matrix.enable_cuda }}
-      run: |
-        sed -i -e "/cudatoolkit/c\  # - cudatoolkit" \
-               -e "/gxx_linux-64/c\  - gxx_linux-64 ${{ matrix.gcc }}" \
-               -e "/torchani/c\  - torchani ${{ matrix.torchani }}" \
-               -e "/nvcc_linux-64/c\  # - nvcc_linux-64" \
-               -e "/python/c\  - python ${{ matrix.python }}" \
-               -e "/pytorch-gpu/c\  - pytorch-cpu ${{ matrix.pytorch }}" \
-               environment.yml
-
-    - name: Show dependency file
-      run: cat environment.yml
-
-    - name: Install dependencies
-      run: mamba env create -n nnpops -f environment.yml
+      uses: mamba-org/provision-with-micromamba@main
       env:
         # Needed to install pytorch-gpu on a machine without a GPU
         CONDA_OVERRIDE_CUDA: ${{ matrix.nvcc }}
+      with:
+        environment-name: nnpops
+        extra-specs: |
+            cudatoolkit==${{ matrix.cuda }}
+            gxx_linux-64==${{ matrix.gcc }}
+            torchani==${{ matrix.torchani }}
+            nvcc_linux-64==${{ matrix.nvcc }}
+            python==${{ matrix.python }}
+            pytorch-gpu==${{ matrix.pytorch }}
 
-    - name: List conda environment
+    - name: Install Micromamba (without cuda)
+      if: ${{ !matrix.enable_cuda }}
+      uses: mamba-org/provision-with-micromamba@main
+      env:
+        # Needed to install pytorch-gpu on a machine without a GPU
+        CONDA_OVERRIDE_CUDA: ${{ matrix.nvcc }}
+      with:
+        environment-name: nnpops
+        extra-specs: |
+            gxx_linux-64==${{ matrix.gcc }}
+            torchani==${{ matrix.torchani }}
+            nvcc_linux-64==${{ matrix.nvcc }}
+            python==${{ matrix.python }}
+            pytorch-gpu==${{ matrix.pytorch }}
+
+    - name: List micromamba environment
       run: |
-        conda activate nnpops
-        conda list
+        micromamba list
 
     - name: Configure, compile, and install
       run: |
-        conda activate nnpops
         mkdir build && cd build
         cmake .. \
               -DENABLE_CUDA=${{ matrix.enable_cuda }} \
@@ -126,6 +117,5 @@ jobs:
 
     - name: Test
       run: |
-        conda activate nnpops
         cd build
         ctest --verbose --exclude-regex TestCuda
