--- a/environment.yml
+++ b/environment.yml
@@ -2,13 +2,12 @@ channels:
   - conda-forge
 dependencies:
   - cmake >=3.20
-  - cudatoolkit 11.2.2
-  - gxx_linux-64 10.3.0
+  - gxx_linux-64
   - make
   - mdtraj
-  - nvcc_linux-64 11.2
-  - torchani 2.2.2
+  - nvcc_linux-64
+  - torchani
   - pytest
-  - python 3.10.*
-  - pytorch-gpu 1.11.0
+  - python
+  - pytorch-gpu
   - sysroot_linux-64 2.17
