--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,7 @@ jobs:
         CONDA_OVERRIDE_CUDA: ${{ matrix.nvcc }}
       with:
         environment-name: nnpops
+        environment-file: devtools/conda-envs/ci-environment.yml 
         extra-specs: |
             cudatoolkit==${{ matrix.cuda }}
             gxx_linux-64==${{ matrix.gcc }}
