--- a/.github/workflows/self-hosted-gpu-test.yml
+++ b/.github/workflows/self-hosted-gpu-test.yml
@@ -55,25 +55,44 @@ jobs:
     - name: Check out
       uses: actions/checkout@v3
 
-    - name: Install Micromamba
-      uses: mamba-org/provision-with-micromamba@main
-      env:
-        HOME: /home/ec2-user
+    - name: Install CUDA Toolkit
+      uses: Jimver/cuda-toolkit@v0.2.10
       with:
-        environment-name: nnpops
-        environment-file: devtools/conda-envs/ci-environment.yml
-        extra-specs: |
-            cudatoolkit==11.7.*
-            gxx_linux-64==10.3.*
-            torchani==2.2.*
-            nvcc_linux-64==11.7.*
-            python==3.10.*
-            pytorch-gpu==2.0.*
+        cuda: 11.7
+        linux-local-args: '["--toolkit", "--override"]' 
+
+    - name: Install Miniconda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        activate-environment: ""
+        auto-activate-base: true
+        miniforge-variant: Mambaforge
+          
+    - name: Prepare dependencies (with CUDA)
+      if: ${{ matrix.enable_cuda }}
+      run: |
+        sed -i -e "/cudatoolkit/c\  - cudatoolkit 11.7.*" \
+               -e "/gxx_linux-64/c\  - gxx_linux-64 10.3.*" \
+               -e "/torchani/c\  - torchani 2.2*" \
+               -e "/nvcc_linux-64/c\  - nvcc_linux-64 11.7.*" \
+               -e "/python/c\  - python 3.10.*" \
+               -e "/pytorch-gpu/c\  - pytorch-gpu 2.0.*" \
+               environment.yml
+
+    - name: Show dependency file
+      run: cat environment.yml
+
+    - name: Install dependencies
+      run: mamba env create -n nnpops -f environment.yml
+
+    - name: List conda environment
+      run: |
+        conda activate nnpops
+        conda list
 
     - name: Configure, compile, and install
       run: |
-        eval "$(micromamba shell hook --shell=bash)"
-        micromamba activate nnpops
+        conda activate nnpops
         mkdir build && cd build
         cmake .. \
               -DENABLE_CUDA=true \
@@ -83,8 +102,7 @@ jobs:
 
     - name: Test
       run: |
-        eval "$(micromamba shell hook --shell=bash)"
-        micromamba activate nnpops
+        conda activate nnpops
         cd build
         ctest --verbose
 
