--- a/.github/workflows/self-hosted-gpu-test.yml
+++ b/.github/workflows/self-hosted-gpu-test.yml
@@ -57,6 +57,8 @@ jobs:
 
     - name: Install Miniconda
       uses: conda-incubator/setup-miniconda@v2
+      env:
+        HOME: /home/ec2-user
       with:
         activate-environment: ""
         auto-activate-base: true
