--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -4,13 +4,13 @@ on: [push, pull_request]
 
 jobs:
   build_wheels:
-    name: Build wheels on cp${{ matrix.python }}-${{ matrix.platform_id }}-${{ matrix.manylinux_image }}
+    name: Build wheels on cp${{ matrix.python }}-linux
 
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest] #, windows-2019, macos-11]
-        python: ['37', '38', '39', '310', '311']
+        python: ['3.7', '3.8', '3.9', '3.10', '3.11']
         torch: ['1.11', '1.12', '2.0.0']
         cuda: ['10', '11', '12']
     steps:
@@ -18,17 +18,17 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: ${{ matrix.python }}
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.13.1
         env:
-          CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
+          CIBW_BUILD: cp${{ matrix.python }}-linux
           CIBW_ENVIRONMENT: TORCH_VERSION=${{ matrix.torch }} CUDA_VERSION=${{ matrix.cuda }}
           
         with:
           package-dir: .
           output-dir: wheelhouse
-        
+
           
         # env:
         #   CIBW_SOME_OPTION: value
