set var for deterministic tests

--- a/.github/workflows/self-hosted-gpu-test.yml
+++ b/.github/workflows/self-hosted-gpu-test.yml
@@ -105,6 +105,7 @@ jobs:
       run: |
         conda activate nnpops
         cd build
+        export CUBLAS_WORKSPACE_CONFIG=:4096:8
         ctest --verbose
 
   stop-runner:
